cripto/force-app/main/default/objects/Mercado__c/Mercado__c.object-meta.xml
<CustomObject>
    <description>It is a market composed of two assets where an investment can be exchanged for one asset</description>
    <label>Mercado</label>
    <nameField>
        <label>Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mercados</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>