cripto/force-app/main/default/objects/Mercado__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>It means that the market is active for new orders</description>
    <inlineHelpText>It means that the market is active for new orders</inlineHelpText>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>