cripto/force-app/main/default/objects/Mercado__c/fields/MoedaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaPrimaria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moeda Primária</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Mercados</relationshipLabel>
    <relationshipName>Mercados</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>