cripto/force-app/main/default/objects/Mercado__c/fields/MoedaSecundaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaSecundaria__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Moeda Secundária</label>
    <referenceTo>Moeda__c</referenceTo>
    <relationshipLabel>Mercados (Moeda Secundária)</relationshipLabel>
    <relationshipName>Mercados1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>