cripto/force-app/main/default/objects/Mercado__c/fields/Nivel_de_Risco__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Risco__c</fullName>
    <label>Nivel de Risco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Baixo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>