cripto/force-app/main/default/objects/Mercado__c/fields/PercentualGanhoPrejuizo__c.field-meta.xml
<CustomField>
    <fullName>PercentualGanhoPrejuizo__c</fullName>
    <formula>(TotalVenda__c - TotalCompra__c) /  TotalCompra__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentual de Ganho/Prejuizo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>