cripto/force-app/main/default/objects/Mercado__c/fields/Saldo__c.field-meta.xml
<CustomField>
    <fullName>Saldo__c</fullName>
    <formula>Text(TotalVenda__c -  TotalCompra__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo</label>
    <type>Text</type>
</CustomField>