cripto/force-app/main/default/objects/Mercado__c/fields/TotalVenda__c.field-meta.xml
<CustomField>
    <fullName>TotalVenda__c</fullName>
    <label>Total Venda</label>
    <summarizedField>Ordem__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem__c.Type__c</field>
        <operation>equals</operation>
        <value>Sell</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem__c.Mercado__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>